# playmakerz

./: .gitignore  Cargo.toml  docker-compose.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/api/: Cargo.toml  README.md  package.json
apps/api/src/: index.ts  main.rs
apps/api/src/routes/: auth.ts  index.ts
apps/api/src/routes/matches/: index.ts
apps/api/src/validations/: login.ts  register.ts
apps/client/: components.json  package.json
apps/client/src/: main.tsx  routes.tsx
apps/client/src/components/auth/: index.tsx
apps/client/src/pages/: home.tsx  maintenance.tsx  not-found.tsx  profile.tsx
