[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.9.0", features = ["redis-rs-session", "redis-rs-tls-session"] }
actix-identity = "0.7.1"
surrealdb = "1.3.1"
